--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -75,7 +75,7 @@ font-4 = Font Awesome 6 Free Regular:size=11;2
 
 modules-left = previous playpause next playerctl playerctl-error
 modules-center = xworkspaces
-modules-right = battery pulseaudio date time
+modules-right = wifi battery vol date time
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -85,7 +85,7 @@ enable-ipc = true
 [module/playpause]
 type = custom/script
 
-exec = bash player_icon.sh
+exec = bash /home/drunkenmarmot/.config/polybar/scripts/player_icon.sh
 tail=true
 click-left = playerctl play-pause
 
@@ -109,6 +109,16 @@ interval = 2
 label-maxlen = 50
 exec = echo $(playerctl metadata -f '{{artist}} - {{title}}')
 exec-if = playerctl metadata -f {{playerName}} 2>/dev/null | grep -Ev 'mopidy' >/dev/null
+
+[module/wifi]
+type = custom/script
+interval = 1
+exec = bash /home/drunkenmarmot/.config/polybar/scripts/wifi.sh
+
+[module/vol]
+type = custom/script
+interval = 1
+exec = bash /home/drunkenmarmot/.config/polybar/scripts/bluetooth.sh
 
 [module/playerctl-error]
 type = custom/script
